[package]
authors = [
    "Marc-André Lureau <marcandre.lureau@redhat.com>",
    "Zeeshan Ali Khan <zeeshanak@gnome.org>",
]
name = "zbus_address"
version = "0.1.0"
description = "D-Bus address parsing"
repository = "https://github.com/dbus2/zbus/"
keywords = ["dbus", "parser"]
categories = ["parsing"]
edition = "2021"
license = "MIT"

[features]
vsock = []

[dependencies]
nix = { version = "0.29", features = ["user"] }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
